[gd_scene load_steps=2 format=3]

[ext_resource type="Script" path="res://src/ui/widgets/budget_widget.gd" id="1_script"]

[node name="BudgetWidget" type="Control"]
custom_minimum_size = Vector2(300, 48)
script = ExtResource("1_script")

[node name="Rows" type="HBoxContainer" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/separation = 14

[node name="BalanceLabel" type="Label" parent="Rows"]
unique_name_in_owner = true
layout_mode = 2
text = "$0"

[node name="IncomeLabel" type="Label" parent="Rows"]
unique_name_in_owner = true
layout_mode = 2
text = "+$0"

[node name="ExpensesLabel" type="Label" parent="Rows"]
unique_name_in_owner = true
layout_mode = 2
text = "-$0"
